support/network_policy_allow_from_project.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-network-policy
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: network-policy-project
  podSelector: {}
  policyTypes:
  - Ingress
