support/network_policy_deny_all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-network-policy
spec:
  podSelector:
  ingress: []
